# dds

./: .gitignore  AGENTS.md  AUTHORS  CONTRIBUTING.md  COPYING  COPYING-README.md  README.md  netlify.toml  package.json  pnpm-lock.yaml  w3c.json
.github/: dependabot.yml
poc/: .gitignore  C-didkey-originated.tsx  README.md  lexicons.json  package.json  result.md
poc/atproto/: README.md
poc/atproto/dds-reference/: .gitignore  README.md  package.json  pnpm-workspace.yaml
poc/atproto/dds-reference/docker/: Caddyfile  README.md  clustering-server.dev.Dockerfile  clustering-server.prod.Dockerfile  compose.dev.yml  indexer.prod.Dockerfile  sveltekit.dev.Dockerfile  sveltekit.prod.Dockerfile
poc/atproto/dds-reference/lexicons/: VERSIONING.md
poc/atproto/dds-reference/python/: README.md
poc/atproto/dds-reference/python/clustering_server/: pyproject.toml
poc/atproto/dds-reference/python/clustering_server/clustering_server/: main.py
poc/atproto/dds-reference/python/dds_client/: README.md  pyproject.toml
poc/atproto/dds-reference/python/dds_client/dds_client/: __init__.py  auth.py  replay.py  version.py
poc/atproto/dds-reference/python/dds_client/scripts/: codegen.py
poc/atproto/guest-in-atproto/: README.md  package.json
poc/dds-reference/: .dockerignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
poc/dds-reference/apps/clustering-admin/: package.json  vite.config.ts
poc/dds-reference/apps/indexer/: README.md  package.json
poc/dds-reference/apps/polis-interface/: README.md  vite.config.ts
poc/dds-reference/apps/visualisation/: package.json  vite.config.ts
poc/dds-reference/docker/: .env.example  compose.prod.yml  dev-entrypoint.sh  indexer.dev.Dockerfile
poc/dds-reference/lexicons/: VERSIONING.md
poc/lexicons/com/: atproto.ts
spec/: 0001-anonymity-addendum.md  0001-dds-protocol.md  0001-implementation-addendum.md  COPYING.md  anonymity-addendum.md  dds-protocol.md  design-rationale.md  implementation-addendum.md
website/: .prettierrc  COPYING  astro.config.mjs  eslint.config.js  package.json
website/public/: CNAME
website/src/__tests__/: mermaid-diagrams.test.ts
website/src/components/: Footer.svelte  Header.svelte
website/src/content/: config.ts
website/src/content/blog/: origin-story.md  (+1 more)
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/styles/: global.css  starlight.css
(+90 files in other folders)
