[project]
name = "clustering_server"
version = "0.1.0"
description = "FastAPI service that runs red-dwarf-based Polis analysis on a DDS project step and republishes results as DDS groups + metrics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
dependencies = [
    "dds-client",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "python-multipart>=0.0.9",
    "anyio>=4.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
postgres = [
    "psycopg[binary]>=3.1",
]
red-dwarf = [
    # red-dwarf isn't on PyPI; install via:
    #   pip install git+https://github.com/polis-community/red-dwarf.git
    # We declare nothing here so the optional install is explicit.
]

[project.scripts]
clustering-server = "clustering_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clustering_server"]

[tool.uv.sources]
dds-client = { path = "../dds_client", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
