[project]
name = "dds_client"
version = "0.1.0"
description = "Python client library for the DDS reference implementation. Mirrors @dds/client."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DDS WG" }]
license = { text = "MPL-2.0" }
dependencies = [
    "atproto>=0.0.55",
    "pydantic>=2.7",
    "httpx>=0.27",
    "websockets>=12.0",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
dds-codegen = "dds_client._codegen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dds_client"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
